# task-service

./: .gitignore  Dockerfile  TESTING.md  alembic.ini  compose.yaml  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py
alembic/versions/: 001_init_tasks.py  002_add_comments.py  003_add_task_history.py  004_add_task_assignees.py  005_add_fulltext_search_index.py
src/: arq_worker.py  main.py  run_escalation_once.py  start.sh
src/task_service/: app.py
src/task_service/api/: comments.py  depends.py  metrics.py  rate_limit.py  tasks.py
src/task_service/api/health_check/: health_check_router.py
src/task_service/api/middleware/: rate_limit.py
src/task_service/core/: config.py  logger.py
src/task_service/core/exceptions/: base.py  rabbitmq.py  tasks.py
src/task_service/core/providers/: setup.py
src/task_service/domain/metrics/: registry_metrics.py  use_case.py
src/task_service/domain/tasks/: auto_escalate_tasks.py
src/task_service/domain/use_cases/: auto_escalate_tasks.py  create_comment.py  create_task.py  delete_task.py  export_tasks_to_csv.py  get_task_comments.py  get_task_history.py  get_task_statistics.py  get_tasks.py  update_task.py
src/task_service/infrastructure/kafka/: publisher.py
src/task_service/schemas/: auth.py  comment.py  task.py  task_history.py
tests/: conftest.py  helpers.py  mocks.py
tests/api/: test_tasks.py
tests/domain/use_cases/: test_create_task.py  test_get_task_statistics.py  test_get_tasks.py
tests/infrastructure/: test_cache_invalidation.py
tests/infrastructure/postgres/: test_repository.py
(+13 files in other folders)
